readme.adoc first draft